--- a/ark_music/build-profile.json5
+++ b/ark_music/build-profile.json5
@@ -10,7 +10,8 @@
       "path": "./src/main/cpp/CMakeLists.txt",
       "arguments": "",
       "cppFlags": "--std=c++14",
-    }
+      "abiFilters": ["arm64-v8a", "x86_64"]
+    },
   },
   "buildOptionSet": [
     {
