更新了arkweb架构

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -31,6 +31,9 @@
               "ohos.want.action.home"
             ]
           }
+        ],
+        "backgroundModes": [
+          "audioPlayback"
         ]
       }
     ],
